K8S_stateful/minikube/sample-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-deployment  
  labels:
    app: sample-app
spec:
  replicas: 1      
  selector:
    matchLabels:
      app: sample-app
  template:        
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: sample-app  
        image: sample-app:$version #Image name
        ports: 
        - containerPort: 5000  
        volumeMounts:
        - name: sample-app-persistent-storage
          mountPath: /var/log/
      volumes:
      - name: sample-app-persistent-storage
        persistentVolumeClaim:
          claimName: sample-app-pv-claim
