K8S_stateful/minikube/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  labels:
    name: sample-app
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      targetPort: 5000
      port: 80
  selector:
    app: sample-app
